Modif multiplication operator with th eright formula for multiplication between complex numbers. Add division operator : working, need fix tests when division between two complex

--- a/UTComputer/CMakeLists.txt
+++ b/UTComputer/CMakeLists.txt
@@ -44,7 +44,9 @@ set(SOURCE_FILES
         operators/OperatorMinus.cpp
         operators/OperatorMinus.h
         operators/OperatorMultiplication.cpp
-        operators/OperatorMultiplication.h)
+        operators/OperatorMultiplication.h
+        operators/OperatorDivision.cpp
+        operators/OperatorDivision.h)
 
 
 add_executable(ut-computer main.cpp ${SOURCE_FILES})
@@ -59,7 +61,7 @@ set(TEST_FILES
         ut-computer-tests/operators-tests/tests_OperatorPlus.cpp
         ut-computer-tests/operators-tests/tests_OperatorMinus.cpp
         ut-computer-tests/operators-tests/tests_OperatorMultiplication.cpp
-        )
+        ut-computer-tests/operators-tests/tests_OperatorDivision.cpp)
 
 
 add_executable(ut-computer-tests ut-computer-tests/main.cpp ${SOURCE_FILES} ${TEST_FILES})
