--- a/UTComputer/CMakeLists.txt
+++ b/UTComputer/CMakeLists.txt
@@ -61,7 +61,8 @@ set(TEST_FILES
         ut-computer-tests/operators-tests/tests_OperatorPlus.cpp
         ut-computer-tests/operators-tests/tests_OperatorMinus.cpp
         ut-computer-tests/operators-tests/tests_OperatorMultiplication.cpp
-        ut-computer-tests/operators-tests/tests_OperatorDivision.cpp)
+        ut-computer-tests/operators-tests/tests_OperatorDivision.cpp
+        )
 
 
 add_executable(ut-computer-tests ut-computer-tests/main.cpp ${SOURCE_FILES} ${TEST_FILES})
