Fix operator == and != to make it work on complex numbers ==> need to add some tests. Add 3 new operators : integer division, modulo and negation => need to create tests for them

--- a/UTComputer/CMakeLists.txt
+++ b/UTComputer/CMakeLists.txt
@@ -65,7 +65,9 @@ set(SOURCE_FILES
         operators/logical_operators/OperatorOr.h
         operators/logical_operators/OperatorNot.cpp
         operators/logical_operators/OperatorNot.h
-        )
+        operators/classic_operators/OperatorIntegerDivision.cpp
+        operators/classic_operators/OperatorIntegerDivision.h
+        operators/classic_operators/OperatorModulo.cpp operators/classic_operators/OperatorModulo.h operators/classic_operators/OperatorNeg.cpp operators/classic_operators/OperatorNeg.cpp operators/classic_operators/OperatorNeg.h)
 
 
 add_executable(ut-computer main.cpp ${SOURCE_FILES})
