--- a/UTComputer/CMakeLists.txt
+++ b/UTComputer/CMakeLists.txt
@@ -67,7 +67,12 @@ set(SOURCE_FILES
         operators/logical_operators/OperatorNot.h
         operators/classic_operators/OperatorIntegerDivision.cpp
         operators/classic_operators/OperatorIntegerDivision.h
-        operators/classic_operators/OperatorModulo.cpp operators/classic_operators/OperatorModulo.h operators/classic_operators/OperatorNeg.cpp operators/classic_operators/OperatorNeg.cpp operators/classic_operators/OperatorNeg.h)
+        operators/classic_operators/OperatorModulo.cpp
+        operators/classic_operators/OperatorModulo.h
+        operators/logical_operators/OperatorNeg.cpp
+        operators/logical_operators/OperatorNeg.cpp
+        operators/logical_operators/OperatorNeg.h
+        )
 
 
 add_executable(ut-computer main.cpp ${SOURCE_FILES})
