Add Memento Implementation : operators UNDO, REDO and tests

--- a/UTComputer/CMakeLists.txt
+++ b/UTComputer/CMakeLists.txt
@@ -135,7 +135,13 @@ set(TEST_FILES
         ut_computer_tests/operators_tests/complex_operators_tests/tests_OperatorRE.cpp
         ut_computer_tests/operators_tests/complex_operators_tests/tests_OperatorIM.cpp
         ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorDUP.cpp
-        ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorCLEAR.cpp ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorDROP.cpp ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorSWAP.cpp ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorLASTOP.cpp ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorLASTARGS.cpp)
+        ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorCLEAR.cpp
+        ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorDROP.cpp
+        ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorSWAP.cpp
+        ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorLASTOP.cpp
+        ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorLASTARGS.cpp
+        ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorUNDO_REDO.cpp
+        )
 
 
 add_executable(ut-computer-tests ut_computer_tests/main.cpp ${SOURCE_FILES} ${TEST_FILES})
