Lots of changes, see commit message --> Calculator    - try on implementation
ComplexLiteral
   - add Constructor that take a string

ExpressionLiteral
   - add static regex for class
   - add static getRegex function
   - constructor now erase all spaces, \t and \n in the string

NumericLiteral
   - add static regex for class
   - add static getRegex function

ProgramLiteral
   - add static regex for class
   - add static getRegex function

LiteralFactory
   - implement factory to create Complex, Expression or Program Literals

tests_ComplexLiteral
   - add test for the new constructor with string argument

tests_NumericLiteral
   - add test for the Regex

tests_ProgramLiteral
   - add test for the Regex

tests_ExpressionLiteral
   - add test for the Regex
   - add test for the changes in the constructor (delete spaces, \n, \t)

--- a/UTComputer/CMakeLists.txt
+++ b/UTComputer/CMakeLists.txt
@@ -101,7 +101,7 @@ set(SOURCE_FILES
         operators/stack_operators/OperatorUNDO.h
         operators/stack_operators/OperatorREDO.cpp
         operators/stack_operators/OperatorREDO.h
-        )
+        Calculator.cpp Calculator.h)
 
 
 add_executable(ut-computer main.cpp ${SOURCE_FILES})
@@ -111,6 +111,8 @@ set(TEST_FILES
         ut_computer_tests/lexer_tests/tests_Lexer.cpp.cpp
         ut_computer_tests/stack_tests/tests_StackUTComputer.cpp
         ut_computer_tests/literals-tests/tests_ExpressionLiteral.cpp
+        ut_computer_tests/literals-tests/tests_NumericLiteral.cpp
+        ut_computer_tests/literals-tests/tests_ComplexLiteral.cpp
         ut_computer_tests/operators_tests/tests_Operator.cpp
         ut_computer_tests/operators_tests/tests_Operator_Manager.cpp
         ut_computer_tests/operators_tests/classic_operators_tests/tests_OperatorPlus.cpp
@@ -141,7 +143,7 @@ set(TEST_FILES
         ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorLASTOP.cpp
         ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorLASTARGS.cpp
         ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorUNDO_REDO.cpp
-        )
+        ut_computer_tests/literals-tests/tests_ProgramLiteral.cpp)
 
 
 add_executable(ut-computer-tests ut_computer_tests/main.cpp ${SOURCE_FILES} ${TEST_FILES})
