Begin testing Operator class : Working so far for classic operator Almost working perfectly on eval operator :    - infixToPostfix don't work on an expression such as 'MOD(2,3)' : the comma inside the parenthesis      isn't managed correctly    - Calculator::checkExpressionCorrectForEval had a problem that is now solved       - we check that every atom in the expression (TOTO, X1, UNEVAR12, SIN, MOD, ...) is a numeric one (failif unkown or program atom)       - but we have to check first that it's not an operator like MOD, NUM, ...

--- a/UTComputer/CMakeLists.txt
+++ b/UTComputer/CMakeLists.txt
@@ -148,7 +148,7 @@ set(TEST_FILES
         ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorLASTOP.cpp
         ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorLASTARGS.cpp
         ut_computer_tests/operators_tests/stack_operators_tests/tests_OperatorUNDO_REDO.cpp
-        )
+        ut_computer_tests/calculator_tests/tests_calculator.cpp)
 
 
 add_executable(ut-computer-tests ut_computer_tests/main.cpp ${SOURCE_FILES} ${TEST_FILES})
